# Vision_Language_Model_Practice

./: .gitignore  .pre-commit-config.yaml  README.md  REFACTORING_PLAN.md  infer.py  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml
config/: __init__.py  dataset_config.py  deepspeed_zero3.yaml  hydra_config.py  model_config.py  training_config.py
core/: __init__.py  device_utils.py  exceptions.py  logging.py  registry.py
docs/: architecture.md  training_autonomous_vehicle.md  training_embodiment.md  training_humanoid.md  training_multi_sensor.md  training_pipeline_overview.md  training_real_robot_deployment.md  training_recipes.md  training_rgbd_manipulation.md  training_robot_manipulation.md  training_simulation_benchmarks.md  training_temporal_world_model.md  usage.md
docs/autonomous/: README.md  deployment.md  embodiment.md  training_datasets.md  training_imitation_learning.md  training_online_rl_carla.md  training_reinforcement_learning.md  training_sensors.md  training_temporal_module.md  training_vla_recipe.md  training_world_model.md
docs/humanoid/: README.md  deployment.md  embodiment.md  training_datasets.md  training_locomotion.md  training_manipulation.md  training_online_rl_isaac.md  training_sensors.md  training_vla_recipe.md  training_whole_body.md
eval/: __init__.py  benchmark.py  evaluator.py  metrics.py
examples/: __init__.py  carla_demo.py  inference_demo.py  mujoco_demo.py  pusht_demo.py
integration/: experiment_manager.py
model/: __init__.py
model/action_head/: __init__.py  diffusion_action_head.py  mlp_action_head.py  transformer_action_head.py
model/fusion/: __init__.py  sensor_fusion.py
model/sensor/: __init__.py  depth_encoder.py  imu_encoder.py  lidar_encoder.py  radar_encoder.py
model/temporal/: temporal_encoder.py
model/utils/: __init__.py  device_utils.py  layers.py
model/utils/export/: __init__.py  base.py  onnx_exporter.py  openvino_exporter.py  optimizer.py  quantization_exporter.py  torchscript_exporter.py  triton_exporter.py  utils.py
model/vla/: __init__.py  multi_sensor_vla.py  openvla_wrapper.py  smolvla_wrapper.py  vla_model.py
model/vlm/: __init__.py  vision_encoder.py  vision_projector.py  vlm_model.py
scripts/: __init__.py  run_driving_vla.sh  run_finetune.sh  run_humanoid_vla.sh  run_il.sh  run_offline_rl.sh  run_online_rl.sh  run_pretrain.sh  run_world_model.sh  slurm_eval.sh  slurm_finetune.sh  slurm_pretrain.sh  slurm_rl.sh
tests/: __init__.py  conftest.py  test_model.py  test_training.py
tests/integration/: __init__.py  test_training_loop.py
tests/unit/: __init__.py  test_action_heads.py  test_configs.py  test_registry.py  test_utils.py
train/: __init__.py  base_trainer.py  deepspeed_zero3.yaml  run_training_slurm.sh
train/datasets/: __init__.py  bc_dataset.py  driving_dataset.py  lerobot_dataset.py  openx_dataset.py  rl_dataset.py
train/embodiment/: train_driving_vla.py  train_humanoid_vla.py
train/finetune/: __init__.py  dataset.py  vla_finetuner.py
train/il/: __init__.py  base_trainer.py  behavioral_cloning.py  dagger.py  gail.py  train.py
train/offline_rl/: base_trainer.py  cql_trainer.py  iql_trainer.py  td3_bc_trainer.py  train.py
train/online_rl/: base_trainer.py  grpo_trainer.py  ppo_trainer.py  sac_trainer.py  train.py
train/pretrain/: __init__.py  alignment_trainer.py  instruction_trainer.py  vlm_pretrainer.py
train/rl/: __init__.py  base_trainer.py  grpo_trainer.py  ppo_trainer.py  sac_trainer.py
train/utils/: __init__.py  logging.py  rl_networks.py  sim2real.py
train/world_model/: train_world_model.py
vla/: __init__.py  exceptions.py  logging.py  registry.py
