[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vla"
version = "0.1.0"
description = "Vision-Language-Action Model Training Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "deep-learning",
    "robotics",
    "vision-language-model",
    "reinforcement-learning",
    "imitation-learning",
    "autonomous-driving",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.44.0",
    "datasets>=2.20.0",
    "accelerate>=0.32.0",
    "peft>=0.12.0",
    "bitsandbytes>=0.43.0",
    "safetensors>=0.4.3",
    "tokenizers>=0.19.0",
    "huggingface-hub>=0.24.0",
    "Pillow>=10.4.0",
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "pyyaml>=6.0.0",
    "einops>=0.8.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "filelock>=3.15.0",
    "tqdm>=4.66.0",
    "wandb>=0.17.0",
    "tensorboard>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "black>=24.4.0",
    "isort>=5.13.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
robot = [
    "gymnasium>=0.29.0",
    "mujoco>=3.1.0",
    "lerobot>=0.1.0",
]
driving = [
    "av>=12.0.0",
    "matplotlib>=3.9.0",
    "plotly>=5.22.0",
    "nuscenes-devkit>=1.1.0",
]
distributed = [
    "deepspeed>=0.14.0",
]
flash = [
    "flash-attn>=2.5.0",
]
all = [
    "vla[dev,robot,driving,distributed]",
]

[project.scripts]
vla = "run:main"

[project.urls]
Homepage = "https://github.com/yourusername/vla"
Documentation = "https://github.com/yourusername/vla#readme"
Repository = "https://github.com/yourusername/vla"
Issues = "https://github.com/yourusername/vla/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["model*", "train*", "eval*", "config*", "integration*", "examples*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

# ============================================
# Tool Configurations
# ============================================

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["model", "train", "eval", "config", "integration", "examples"]
skip = [".git", ".venv", "build", "dist"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
    "ARG001", # unused function argument (common in ML)
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]
"examples/*" = ["ARG"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "build",
    "dist",
    ".venv",
]

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "torchvision.*",
    "PIL.*",
    "cv2.*",
    "wandb.*",
    "gymnasium.*",
    "mujoco.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cuda: marks tests that require CUDA",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["model", "train", "eval", "config"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
